--- a/rakefile
+++ b/rakefile
@@ -11,6 +11,7 @@ namespace :db do
         ruby "BanjoBook.rb BanjoSource.csv BanjoTunes.csv"
         ruby "BanjoBook.rb ParkerSource.csv ClawhammerTunes-Parker.csv"
         ruby "BanjoBook.rb LuncefordSource.csv DropThumbTunes.csv"
+        ruby "BanjoBook.rb IversonSource.csv IversonTunes.csv"
     end
 
     task :migrate do
