--- a/rakefile
+++ b/rakefile
@@ -8,6 +8,7 @@ namespace :db do
     end
 
     task :build => :migrate do
+        ruby "BanjoBook.rb FestivalTunesSources.csv FestivalTunes.csv"
         ruby "BanjoBook.rb BanjoSource.csv BanjoTunes.csv"
         ruby "BanjoBook.rb ParkerSource.csv ClawhammerTunes-Parker.csv"
         ruby "BanjoBook.rb LuncefordSource.csv DropThumbTunes.csv"
